# keras_autocompressor

./: .gitconfig  .gitignore  README.md  Test_Autocompressor_MobileNet.ipynb  Test_Autocompressor_MobileNetV2.ipynb  Test_Custom_MobileNetV2.ipynb  Test_MobileNetV2.ipynb  Tuner_SkippingLayers_MobileNetV2_Flowers_V4.ipynb  dockerfile  pyproject.toml  readme.md
auto_compressor/: hypermodels.py
auto_compressor/translators/: efficientnetb5_skip_from_114_to_396_5ep_lr0.001.npy  efficientnetb5_skip_from_395_to_530_5ep_lr0.001.npy  efficientnetb5_skip_from_40_to_530_5ep_lr0.001.npy  mobilenetv1_skip_from_16_to_73_5ep_lr0.001.npy  mobilenetv1_skip_from_35_to_73_5ep_lr0.001.npy  mobilenetv1_skip_from_42_to_73_5ep_lr0.001.npy  mobilenetv1_skip_from_48_to_73_5ep_lr0.001.npy  mobilenetv1_skip_from_60_to_80_5ep_lr0.001.npy  mobilenetv1_skip_from_9_to_80_5ep_lr0.001.npy  mobilenetv2_skip_from_106_to_151_5ep_lr0.001.npy  mobilenetv2_skip_from_124_to_151_5ep_lr0.001.npy  mobilenetv2_skip_from_133_to_151_5ep_lr0.001.npy  mobilenetv2_skip_from_142_to_151_5ep_lr0.001.npy  mobilenetv2_skip_from_26_to_143_5ep_lr0.001.npy  mobilenetv2_skip_from_35_to_151_5ep_lr0.001.npy  mobilenetv2_skip_from_53_to_151_5ep_lr0.001.npy  mobilenetv2_skip_from_8_to_143_5ep_lr0.001.npy
keras_autocompressor/: hypermodels.py  metrics.py  pruning.py  transfer_learning.py
keras_autocompressor/translators/: efficientnetb5_skip_from_188_to_530_5ep_lr0.001.npy  efficientnetb5_skip_from_292_to_530_5ep_lr0.001.npy  efficientnetb5_skip_from_40_to_396_5ep_lr0.001.npy  mobilenetv1_skip_from_16_to_80_5ep_lr0.001.npy  mobilenetv1_skip_from_22_to_73_5ep_lr0.001.npy  (+26 more)
test/: Custom_MobileNetV2_Compressor.ipynb  MobileNetV2_Compressor.ipynb
(+16 files in other folders)
