[project]
name = "keras-autocompressor"
version = "0.0.3"
authors = [
  { name="J. D. Camacho", email="camacho.castillo.jdavid@gmail.com" },
  { name="Carlos Villaseñor", email="carlos.villasenor@academicos.udg.mx" },
  { name="Javier Gómez Avila", email="jenrique.gomez@academicos.udg.mx" },
  { name="Carlos Lopez-Franco", email="carlos.lfranco@academicos.udg.mx" },
  { name="Nancy Arana-Daniel", email="nancy.arana@academicos.udg.mx " },

]
description = "Keras auto-compressor toolkit"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "tensorflow>=2.4, <2.16",
  "keras-tuner>=1.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Drivit/keras_autocompressor"
Issues = "https://github.com/Drivit/keras_autocompressor/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
